Kubernetes/db-sv.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: ingress-nginx
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
